:recycle: Replace {{image}} for {{img_url}}

--- a/author.hbs
+++ b/author.hbs
@@ -8,9 +8,9 @@
 
     <div class="wrap">
     	<section itemprop="author" itemscope itemtype="http://schema.org/Person" class="row middle-xs center-xs author-profile inner">
-    	    {{#if image}}
+    	    {{#if profile_image}}
 	    	    <figure class="author-image">
-	    	        <img itemprop="image" src="{{image}}" class="img" alt="{{name}}">
+	    	        <img itemprop="image" src="{{profile_image}}" class="img" alt="{{name}}">
 	    	    </figure>
     	    {{/if}}
     	    <h1 itemprop="name" class="author-title col-xs-12">{{name}}</h1>
