--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -3,7 +3,7 @@
 		<div class="col-xs-12 col-sm-6 post-wrap">
 			<article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="post-card {{post_class}}">
 			    <header itemprop="image" itemscope itemtype="https://schema.org/ImageObject">
-					<img src="{{image}}" itemprop="url" content="{{image}}">
+					<img src="{{img_url feature_image}}" itemprop="url" content="{{img_url feature_image}}">
 					<meta itemprop="width" content="3000">
 					<meta itemprop="height" content="1350">
 				</header>
