--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -27,7 +27,7 @@
 			        </div>
 			        <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
 						<div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-							<meta itemprop="url" content="{{author.image}}">
+							<meta itemprop="url" content="{{author.profile_image}}">
 							<meta itemprop="width" content="450">
 							<meta itemprop="height" content="450">
 						</div>
