:recycle: Replace {{blog.cover}} for {{blog.cover_image}}

--- a/post.hbs
+++ b/post.hbs
@@ -5,7 +5,7 @@
 
 <article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="{{post_class}}">
 
-	<header itemprop="image" itemscope itemtype="https://schema.org/ImageObject" class="main-header post-head{{#if image}}" style="background-image: url({{img_url feature_image}}){{else}}no-cover{{/if}}">
+	<header itemprop="image" itemscope itemtype="https://schema.org/ImageObject" class="main-header post-head{{#if feature_image}}" style="background-image: url({{img_url feature_image}}){{else}}no-cover{{/if}}">
 		{{#if feature_image}}
 		<meta itemprop="url" content="{{img_url feature_image}}">
 		<meta itemprop="width" content="3000">
