--- a/index.hbs
+++ b/index.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 
-<header class="main-header {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{/if}}">
+<header class="main-header {{#if @blog.cover_image}}" style="background-image: url({{@blog.cover_image}}){{/if}}">
     <div class="wrap-big">
         <!--{{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}-->
         <h1 class="page-title">{{@blog.title}}</h1>
