:recycle: Ghost 1.x.x compatibility (#1)
* :recycle: Replace {{image}} for {{img_url}}

* :wrench: Update package.json

* :recycle: Replace {{cover}} for {{cover_image}}

* :recycle: Replace {{author.image}} for {{author.profile_image}}

* :recycle: Replace {{blog.cover}} for {{blog.cover_image}}

* :recycle: Replace {{id}} for {{comment_id}}

* :fire: Remove {{meta_description}}

--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -3,7 +3,7 @@
 		<div class="col-xs-12 col-sm-6 post-wrap">
 			<article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="post-card {{post_class}}">
 			    <header itemprop="image" itemscope itemtype="https://schema.org/ImageObject">
-					<img src="{{image}}" itemprop="url" content="{{image}}">
+					<img src="{{img_url feature_image}}" itemprop="url" content="{{img_url feature_image}}">
 					<meta itemprop="width" content="3000">
 					<meta itemprop="height" content="1350">
 				</header>
@@ -27,7 +27,7 @@
 			        </div>
 			        <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
 						<div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-							<meta itemprop="url" content="{{author.image}}">
+							<meta itemprop="url" content="{{author.profile_image}}">
 							<meta itemprop="width" content="450">
 							<meta itemprop="height" content="450">
 						</div>
