--- a/post.hbs
+++ b/post.hbs
@@ -5,9 +5,9 @@
 
 <article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="{{post_class}}">
 
-	<header itemprop="image" itemscope itemtype="https://schema.org/ImageObject" class="main-header post-head{{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
-		{{#if image}}
-		<meta itemprop="url" content="{{image}}">
+	<header itemprop="image" itemscope itemtype="https://schema.org/ImageObject" class="main-header post-head{{#if feature_image}}" style="background-image: url({{img_url feature_image}}){{else}}no-cover{{/if}}">
+		{{#if feature_image}}
+		<meta itemprop="url" content="{{img_url feature_image}}">
 		<meta itemprop="width" content="3000">
 		<meta itemprop="height" content="1350">
 		{{/if}}
@@ -41,7 +41,7 @@
 		<script>
 		var disqus_config = function () {
 		    this.page.url = '{{url absolute="true"}}';
-		    this.page.identifier = {{id}};
+		    this.page.identifier = {{comment_id}};
 		};
 		(function() {
 		var d = document, s = d.createElement('script');
