--- a/default.hbs
+++ b/default.hbs
@@ -89,7 +89,7 @@
             a.async = 1;
             a.src = g;
             m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.carloscuesta.me/js/ga.js', 'ga');
+        })(window, document, 'script', '//carloscuesta.me/js/ga.js', 'ga');
         ga('create', 'UA-67824860-3', 'auto');
         ga('send', 'pageview');
     </script>
