--- a/post.hbs
+++ b/post.hbs
@@ -41,7 +41,7 @@
 		<script>
 		var disqus_config = function () {
 		    this.page.url = '{{url absolute="true"}}';
-		    this.page.identifier = {{comment_id}};
+		    this.page.identifier = '{{comment_id}}';
 		};
 		(function() {
 		var d = document, s = d.createElement('script');
