--- a/post.hbs
+++ b/post.hbs
@@ -29,7 +29,7 @@
         					<a href="{{url}}" title="{{name}}" class="tag {{name}}" onmousedown="ga('send', 'event', 'Blog', 'Post - Tag {{name}}');">#{{name}}</a>
     					{{/foreach}}
     				</span>{{/if}}
-					<span class="author-meta-name">{{author.name}}</span>
+					<span class="author-meta-name">{{primary_author.name}}</span>
     				<a class="post-comments" href="{{url}}#disqus_thread" onmousedown="ga('send', 'event', 'Blog', 'Post - Comments');">Comments</a>
             </section>
         </header>
