--- a/index.hbs
+++ b/index.hbs
@@ -1,10 +1,10 @@
 {{!< default}}
 
-<header class="main-header {{#if @blog.cover_image}}" style="background-image: url({{@blog.cover_image}}){{/if}}">
+<header class="main-header {{#if @site.cover_image}}" style="background-image: url({{@site.cover_image}}){{/if}}">
     <div class="wrap-big">
-        <!--{{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}-->
-        <h1 class="page-title">{{@blog.title}}</h1>
-        <h2 class="page-description">{{@blog.description}}</h2>
+        <!--{{#if @site.logo}}<a class="blog-logo" href="{{@site.url}}"><img src="{{@site.logo}}" alt="{{@site.title}}" /></a>{{/if}}-->
+        <h1 class="page-title">{{@site.title}}</h1>
+        <h2 class="page-description">{{@site.description}}</h2>
     </div>
 </header>
 
